[package]
name = "code_gen"
version = "0.1.0"
edition = "2021"
# edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizer = {path = "../tokenizer"}
parser = {path = "../parser"}
llvm-sys = "*"
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
# inkwell = "0.4.0"
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm17-0"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master" }