[package]
name = "code_gen"
version = "0.1.0"
edition = "2021"
# edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizer = {path = "../tokenizer"}
parser = {path = "../parser"}
llvm-sys = "*"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }