[package]
name = "cust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokenizer = { path = "../tokenizer" }
parser = { path = "../parser" }
code_gen = { path = "../code_gen" }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
clap = { version = "4.5.20", features = ["derive"] }
