[package]
name = "cust"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jun Suzuki <jun.suzuki.japan@gmail.com>"]
description = "Programming Language Cust"

[dependencies]

tokenizer = { path = "../tokenizer" }
parser = { path = "../parser" }
code_gen = { path = "../code_gen" }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
clap = { version = "4.5.20", features = ["derive"] }
